--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                 outline-color: #FF0000;
             }
 
+            .rating-plus::after {
+                font-size: 0.95rem;
+                content: "+";
+                position: absolute;
+            }
+
             /*
             .rating-highest::before {
                 font-size: 0.6rem;
